--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='30'>
     <tr>
-      <td><img src="images/sanket.png" alt="Sanket photo"></td>
+      <td><img src="images/sanket1.png" alt="Sanket photo"></td>
       <td>
         <h1>Sanket Waingade</h1>
         <p><em>Web Developer</em></p>
